Change get(0) to getFirst() in storage test